--- a/防小米页面/index.html
+++ b/防小米页面/index.html
@@ -45,22 +45,105 @@
           <span>|</span>
           <a href="">Select Location</a>
         </div>
+
+        <div class="top-gt">
+          <div class="car-box">
+            <a href="">购物车</a>
+            <div class="pop">
+              <ul class="list">
+                <li>
+                  <a href="" class="pic">
+                    <img src="./img/mi10.PNG" alt=""
+                  /></a>
+                  <div class="txt">小米10，全网通版</div>
+                  <div class="num">
+                    <i>X</i>
+                    <h4>3299元 X 1</h4>
+                  </div>
+                </li>
+
+                <li>
+                  <a href="" class="pic">
+                    <img src="./img/mi10.PNG" alt=""
+                  /></a>
+                  <div class="txt">小米10，全网通版</div>
+                  <div class="num">
+                    <i>X</i>
+                    <h4>3299元 X 1</h4>
+                  </div>
+                </li>
+                <li>
+                  <a href="" class="pic">
+                    <img src="./img/mi10.PNG" alt=""
+                  /></a>
+                  <div class="txt">小米10，全网通版</div>
+                  <div class="num">
+                    <i>X</i>
+                    <h4>3299元 X 1</h4>
+                  </div>
+                </li>
+                <li>
+                  <a href="" class="pic">
+                    <img src="./img/mi10.PNG" alt=""
+                  /></a>
+                  <div class="txt">小米10，全网通版</div>
+                  <div class="num">
+                    <i>X</i>
+                    <h4>3299元 X 1</h4>
+                  </div>
+                </li>
+                <li>
+                  <a href="" class="pic">
+                    <img src="./img/mi10.PNG" alt=""
+                  /></a>
+                  <div class="txt">小米10，全网通版</div>
+                  <div class="num">
+                    <i>X</i>
+                    <h4>3299元 X 1</h4>
+                  </div>
+                </li>
+                <li>
+                  <a href="" class="pic">
+                    <img src="./img/mi10.PNG" alt=""
+                  /></a>
+                  <div class="txt">小米10，全网通版</div>
+                  <div class="num">
+                    <i>X</i>
+                    <h4>3299元 X 1</h4>
+                  </div>
+                </li>
+                <li>
+                  <a href="" class="pic">
+                    <img src="./img/mi10.PNG" alt=""
+                  /></a>
+                  <div class="txt">小米10，全网通版</div>
+                  <div class="num">
+                    <i>X</i>
+                    <h4>3299元 X 1</h4>
+                  </div>
+                </li>
+              </ul>
+              <div class="total">
+                <div class="price">
+                  <p>共八件商品</p>
+                  <h3>6062元</h3>
+                </div>
+                <a href="" class="btn">立即结算</a>
+              </div>	
+            </div>
+          </div>
+
+          <div class="login">
+            <a href="">登录</a>
+            <span>|</span>
+            <a href="">注册</a>
+            <span>|</span>
+            <a href="">消息通知</a>
+            <span>|</span>
+          </div>
+        </div>
       </div>
       <!-- 顶部右边 -->
-      <div  class="top-gt">
-        <div class="car-box">
-         购物车
-        </div>
-
-      <div class="login">
-        <a href="">登录</a>
-        <span>|</span>
-        <a href="">注册</a>
-        <span>|</span>
-        <a href="">消息通知</a>
-        <span>|</span>
-      </div>
     </div>
-  </div>
   </body>
 </html>
