--- a/防小米页面/index.html
+++ b/防小米页面/index.html
@@ -10,9 +10,12 @@
   <link rel="stylesheet" href="./css/reset.css" />
   <!-- 引入元素样式 -->
   <link rel="stylesheet" href="./css/index.css" />
+  <!-- 网页标题图标 -->
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
   <body>
     <!-- header -->
     <div class="page-top">
+      <!-- 顶部右边 -->
       <div class="container">
         <div class="top-lt">
           <a href="">小米商城</a>
@@ -129,7 +132,7 @@
                   <h3>6062元</h3>
                 </div>
                 <a href="" class="btn">立即结算</a>
-              </div>	
+              </div>
             </div>
           </div>
 
@@ -143,7 +146,56 @@
           </div>
         </div>
       </div>
-      <!-- 顶部右边 -->
+    </div>
+
+
+
+    <!-- page-nav -->
+    <div class="page-nav">
+      <div class="container">
+        <a href="" class="logo"></a>
+        <ul class="nav">
+          <li class="nav-item">
+            <a href="" class="tit">小米手机</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="tit">Redmi 红米</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="tit">电视</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="tit">笔记本</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="tit">家电</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="tit">路由器</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="tit">智能硬件</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="tit">服务</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="tit">社区</a>
+          </li>
+        </ul>
+        <!-- 搜索框 -->
+        <div class="search">
+            <form action=""  method="POST">
+                <input type="text"  name=""  class="q">
+                <input type="submit"  class="btn" name="" id=""value="">
+                <div class="tags">
+                  <span  ">小米</span>
+                  <span  ">小米10青春版</span>
+
+            </form>
+
+        </div>
+      </div>
     </div>
   </body>
 </html>
